--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "2pg-music": "^1.1.2",
     "@discordjs/opus": "^0.4.0",
     "discord": "^0.8.2",
+    "discord-bot-dashboard": "^0.2.0",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "ffmpeg": "0.0.4",
