--- a/settings.json
+++ b/settings.json
@@ -1,3 +1,6 @@
 {
-  "prefix": "??"
+  "prefix": "??",
+  "badwords": ["fuck", "Fuck", "bitch", "Bitch", "asshole", "Asshole"],
+  "automodDefault": false,
+  "ownerID": "459097988397269002"
 }
