Fixed automod, added bot owner only resetdb command + non-functioning link filter

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
   "prefix": "??",
-  "badwords": ["fuck", "Fuck", "bitch", "Bitch", "asshole", "Asshole"],
-  "automodDefault": false,
+  "badwords": [ "fuck", "Fuck", "bitch", "Bitch", "asshole", "Asshole" ],
+  "badLinks": [ "google.com" ],
   "ownerID": "459097988397269002"
 }
