Added loads of stuff, from NSFW commands to embed content.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@keyv/mongo": "^1.1.0",
     "@replit/database": "^2.0.0",
     "body-parser": "^1.19.0",
+    "canvas": "^2.6.1",
     "cookies": "^0.8.0",
     "disco-oauth": "^5.0.1",
     "discord": "^0.8.2",
@@ -26,6 +27,7 @@
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.17",
     "node": "^15.7.0",
+    "node-fetch": "^2.6.1",
     "nodejs": "0.0.0",
     "rate-limit-mongo": "^2.3.0",
     "yt-search": "^2.6.0",
