--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,6 @@
   "prefix": "??",
   "badwords": [ "fuck", "Fuck", "bitch", "Bitch", "asshole", "Asshole" ],
   "badLinks": [ "google.com" ],
-  "ownerID": "459097988397269002"
+  "ownerID": "459097988397269002",
+  "temporaryAccessID": "none"
 }
